--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -6,6 +6,10 @@
 #
 alembic==1.10.3
     # via flask-migrate
+certifi==2022.12.7
+    # via requests
+charset-normalizer==3.1.0
+    # via requests
 click==8.1.3
     # via flask
 decorator==5.1.1
@@ -35,6 +39,8 @@ greenlet==2.0.2
     # via sqlalchemy
 gunicorn==20.1.0
     # via -r requirements/requirements.in
+idna==3.4
+    # via requests
 itsdangerous==2.1.2
     # via
     #   flask
@@ -55,6 +61,8 @@ psycopg2==2.9.6
     # via -r requirements/requirements.in
 python-dotenv==1.0.0
     # via -r requirements/requirements.in
+requests==2.28.2
+    # via -r requirements/requirements.in
 sqlalchemy==2.0.9
     # via
     #   alembic
@@ -63,6 +71,8 @@ typing-extensions==4.5.0
     # via
     #   alembic
     #   sqlalchemy
+urllib3==1.26.15
+    # via requests
 validators==0.20.0
     # via digital-land-frontend
 werkzeug==2.2.3
