--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -6,12 +6,18 @@
 #
 alembic==1.10.3
     # via flask-migrate
+authlib==1.2.1
+    # via -r requirements/requirements.in
 certifi==2022.12.7
     # via requests
+cffi==1.15.1
+    # via cryptography
 charset-normalizer==3.1.0
     # via requests
 click==8.1.3
     # via flask
+cryptography==41.0.4
+    # via authlib
 decorator==5.1.1
     # via validators
 digital_land_frontend @ git+https://github.com/digital-land/digital-land-frontend.git
@@ -59,6 +65,8 @@ markupsafe==2.1.2
     #   wtforms
 psycopg2-binary==2.9.6
     # via -r requirements/requirements.in
+pycparser==2.21
+    # via cffi
 python-dotenv==1.0.0
     # via -r requirements/requirements.in
 requests==2.28.2
