--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -4,46 +4,63 @@
 #
 #    pip-compile requirements/requirements.in
 #
-alembic==1.10.3
+alembic==1.12.0
     # via flask-migrate
+attrs==23.1.0
+    # via fiona
 authlib==1.2.1
     # via -r requirements/requirements.in
-certifi==2022.12.7
-    # via requests
-cffi==1.15.1
-    # via cryptography
-charset-normalizer==3.1.0
-    # via requests
-click==8.1.3
+blinker==1.6.3
     # via flask
+certifi==2023.7.22
+    # via
+    #   fiona
+    #   pyproj
+    #   requests
+cffi==1.16.0
+    # via cryptography
+charset-normalizer==3.3.0
+    # via requests
+click==8.1.7
+    # via
+    #   click-plugins
+    #   cligj
+    #   fiona
+    #   flask
+click-plugins==1.1.1
+    # via fiona
+cligj==0.7.2
+    # via fiona
 cryptography==41.0.4
     # via authlib
-decorator==5.1.1
-    # via validators
 digital_land_frontend @ git+https://github.com/digital-land/digital-land-frontend.git
     # via -r requirements/requirements.in
-flask==2.2.3
+fiona==1.9.4.post1
+    # via geopandas
+flask==3.0.0
     # via
     #   -r requirements/requirements.in
     #   flask-migrate
     #   flask-sqlalchemy
     #   flask-sslify
     #   flask-wtf
-flask-migrate==4.0.4
+flask-migrate==4.0.5
     # via -r requirements/requirements.in
-flask-sqlalchemy==3.0.3
+flask-sqlalchemy==3.1.1
     # via
     #   -r requirements/requirements.in
     #   flask-migrate
 flask-sslify==0.1.5
     # via -r requirements/requirements.in
-flask-wtf==1.1.1
+flask-wtf==1.2.1
     # via -r requirements/requirements.in
-govuk-frontend-jinja==2.5.0
+geopandas==0.14.0
+    # via -r requirements/requirements.in
+govuk-frontend-jinja==2.7.0
     # via digital-land-frontend
 greenlet==3.0.0
     # via sqlalchemy
-gunicorn==20.1.0
+gunicorn==21.2.0
     # via -r requirements/requirements.in
 idna==3.4
     # via requests
@@ -57,40 +74,59 @@ jinja2==3.1.2
     #   govuk-frontend-jinja
 mako==1.2.4
     # via alembic
-markupsafe==2.1.2
+markupsafe==2.1.3
     # via
     #   jinja2
     #   mako
     #   werkzeug
     #   wtforms
 numpy==1.26.0
-    # via shapely
-psycopg2-binary==2.9.6
+    # via
+    #   pandas
+    #   shapely
+packaging==23.2
+    # via
+    #   geopandas
+    #   gunicorn
+pandas==2.1.1
+    # via geopandas
+psycopg2-binary==2.9.9
     # via -r requirements/requirements.in
 pycparser==2.21
     # via cffi
+pyproj==3.6.1
+    # via geopandas
+python-dateutil==2.8.2
+    # via pandas
 python-dotenv==1.0.0
     # via -r requirements/requirements.in
-requests==2.28.2
+pytz==2023.3.post1
+    # via pandas
+requests==2.31.0
     # via -r requirements/requirements.in
 shapely==2.0.1
-    # via -r requirements/requirements.in
-sqlalchemy==2.0.9
+    # via
+    #   -r requirements/requirements.in
+    #   geopandas
+six==1.16.0
+    # via
+    #   fiona
+    #   python-dateutil
+sqlalchemy==2.0.21
     # via
     #   alembic
     #   flask-sqlalchemy
-typing-extensions==4.5.0
+typing-extensions==4.8.0
     # via
     #   alembic
     #   sqlalchemy
-urllib3==1.26.15
+tzdata==2023.3
+    # via pandas
+urllib3==2.0.6
     # via requests
-validators==0.20.0
+validators==0.22.0
     # via digital-land-frontend
-werkzeug==2.2.3
+werkzeug==3.0.0
     # via flask
-wtforms==3.0.1
+wtforms==3.1.0
     # via flask-wtf
-
-# The following packages are considered to be unsafe in a requirements file:
-# setuptools
