--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -6,6 +6,8 @@
 #
 alembic==1.12.0
     # via flask-migrate
+annotated-types==0.7.0
+    # via pydantic
 attrs==23.1.0
     # via fiona
 authlib==1.2.1
@@ -94,6 +96,10 @@ psycopg2-binary==2.9.9
     # via -r requirements/requirements.in
 pycparser==2.21
     # via cffi
+pydantic==2.9.1
+    # via -r requirements/requirements.in
+pydantic-core==2.23.3
+    # via pydantic
 pyproj==3.6.1
     # via geopandas
 python-dateutil==2.8.2
@@ -119,6 +125,8 @@ sqlalchemy==2.0.21
 typing-extensions==4.8.0
     # via
     #   alembic
+    #   pydantic
+    #   pydantic-core
     #   sqlalchemy
 tzdata==2023.3
     # via pandas
